--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Time and <b>Space Complexity</b></h1>
+	<p>Time Complexity and efficient</p>
+	<p>Space Complexity and 0(n).</p>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
