--- a/main.html
+++ b/main.html
@@ -8,9 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Time and <b>Space Complexity</b></h1>
-	<p>Time Complexity and efficient</p>
-	<p>Space Complexity and 0(n).</p>
+	  <!-- Heading -->
+    <h1>Understanding Time, Space, and Complexity</h1>
+
+    <!-- First Paragraph -->
+    <p>
+        Time complexity is a crucial aspect of algorithm design, determining how efficiently an algorithm can perform as the input size grows. An algorithm with better time complexity will typically be more efficient, especially when dealing with large datasets.
+    </p>
+
+    <!-- Second Paragraph -->
+    <p>
+        <b>Space Complexity</b> refers to the amount of memory an algorithm requires relative to its input size. It is often expressed using Big-O notation, such as <b>O(n)</b>, which indicates that the memory usage grows linearly with the input size.
+    </p>
 	
     <script type="text/javascript" src="./script.js">
 </script>
